# Advanced-C-URL-Shortener-Microservice

./: .dockerignore  .gitignore  CMakeLists.txt  Config.cpp  Config.h  Dockerfile  Logger.cpp  Logger.h  Readme.md  Server.cpp  Server.h  URLShortnerDB.cpp  URLShortnerDB.h  build.sh  delete.txt  main.cpp  payload.json  schema.sql
Modals/: GlobalSettingDTO.h  QuotaDTO.h  SessionDTO.h  ShortenedLink.h  UserDTO.h
